fixed contact vertical spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ footer{
 }
 
 .contactTitle {
-  padding-top: 7.5%;
+  padding-top: 15vh;
 }
 
 .resumeTitle {
